Fixing color contrast on header more-txt class

--- a/Proj1 - BlogSite/css/headernav.css
+++ b/Proj1 - BlogSite/css/headernav.css
@@ -23,7 +23,7 @@
 }
 
 .more-txt {
-	color: #ffbd1f;
+	text-decoration-color: #ffbd1f;
 }
 
 /* navbar */
